<resources>
    <string name="app_name">CalculatorInFire</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="string_4">4</string>
    <string name="string_5">5</string>
    <string name="string_6">6</string>
    <string name="string_7">7</string>
    <string name="string_8">8</string>
    <string name="string_9">9</string>
    <string name="string_0">0</string>
    <string name="string_minus">-</string>
    <string name="string_plus">+</string>
    <string name="string_multiply">*</string>
    <string name="string_division">/</string>
    <string name="string_equality">=</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="use_system_theme">Use system theme</string>
    <string name="theme_light">Theme Light</string>
    <string name="theme_dark">Theme Dark</string>
    <string name="test_intent">Test Intent</string>

</resources>